--- a/ReversiMvcApp/ReversiMvcApp.csproj
+++ b/ReversiMvcApp/ReversiMvcApp.csproj
@@ -13,11 +13,17 @@
         <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="5.0.14" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.14" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="5.0.14" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.NewtonsoftJson" Version="5.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.14" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.14" />
         <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="ClientApp" />
     </ItemGroup>
 
 </Project>
