--- a/ReversiMvcApp/ClientApp/package.json
+++ b/ReversiMvcApp/ClientApp/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "@microsoft/signalr": "^6.0.3",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
+    "react-jss": "10.9.0"
   }
 }
