--- a/ReversiMvcApp/ClientApp/package.json
+++ b/ReversiMvcApp/ClientApp/package.json
@@ -1,37 +1,37 @@
 {
-  "name": "clientapp",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "build": "cross-env NODE_ENV=dev webpack",
-    "watch": "cross-env NODE_ENV=dev webpack watch",
-    "prod": "cross-env NODE_ENV=production webpack watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@svgr/webpack": "6.2.1",
-    "@types/node": "^17.0.23",
-    "@types/react": "17.0.43",
-    "@types/react-dom": "17.0.14",
-    "cross-env": "7.0.3",
-    "css-loader": "6.7.1",
-    "mini-css-extract-plugin": "2.6.0",
-    "prettier": "2.6.1",
-    "ts-loader": "9.2.8",
-    "tsconfig-paths-webpack-plugin": "3.5.2",
-    "typescript": "4.6.3",
-    "webpack": "5.70.0",
-    "webpack-cli": "4.9.2"
-  },
-  "dependencies": {
-    "@microsoft/signalr": "^6.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-hot-toast": "^2.2.0",
-    "react-jss": "10.9.0"
-  }
+    "name": "clientapp",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "build": "cross-env NODE_ENV=dev webpack",
+        "watch": "cross-env NODE_ENV=dev webpack watch",
+        "prod": "cross-env NODE_ENV=production webpack watch",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "@svgr/webpack": "6.2.1",
+        "@types/node": "17.0.23",
+        "@types/react": "17.0.43",
+        "@types/react-dom": "17.0.14",
+        "cross-env": "7.0.3",
+        "css-loader": "6.7.1",
+        "mini-css-extract-plugin": "2.6.0",
+        "prettier": "2.6.1",
+        "ts-loader": "9.2.8",
+        "tsconfig-paths-webpack-plugin": "3.5.2",
+        "typescript": "4.6.3",
+        "webpack": "5.70.0",
+        "webpack-cli": "4.9.2"
+    },
+    "dependencies": {
+        "@microsoft/signalr": "6.0.3",
+        "react": "17.0.2",
+        "react-dom": "17.0.2",
+        "react-hot-toast": "2.2.0",
+        "react-jss": "10.9.0"
+    }
 }
