--- a/ReversiMvcApp/ClientApp/package.json
+++ b/ReversiMvcApp/ClientApp/package.json
@@ -29,7 +29,9 @@
     },
     "dependencies": {
         "@microsoft/signalr": "6.0.3",
+        "chart.js": "3.7.1",
         "react": "17.0.2",
+        "react-chartjs-2": "4.0.1",
         "react-dom": "17.0.2",
         "react-hot-toast": "2.2.0",
         "react-jss": "10.9.0"
